--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -1,18 +1,24 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id "androidx.navigation.safeargs.kotlin"
+
+}
+
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
-apply plugin: "androidx.navigation.safeargs.kotlin"
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion rootProject.compileSdkVersion
-    buildToolsVersion "29.0.2"
+    namespace 'com.udacity.location_reminders'
+
+    compileSdkVersion 33
 
     defaultConfig {
-        applicationId "com.udacity.project4"
-        minSdkVersion rootProject.minSdkVersion
-        targetSdkVersion rootProject.targetSdkVersion
+        applicationId "com.udacity.location_reminders"
+        minSdkVersion 26
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -23,18 +29,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
     testOptions.unitTests {
         includeAndroidResources = true
-        returnDefaultValues = true
+        returnDefaultValues = false
     }
 
-    //dataBinding {
-    //    enabled = true
-    //    enabledForTests = true
-    //}
     buildFeatures {
         dataBinding true
     }
@@ -42,85 +41,160 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    // App dependencies
-    implementation "androidx.appcompat:appcompat:$appCompatVersion"
-    implementation "androidx.legacy:legacy-support-v4:$androidXLegacySupport"
-    implementation "androidx.annotation:annotation:$androidXAnnotations"
 
-    implementation "androidx.cardview:cardview:$cardVersion"
-    implementation "com.google.android.material:material:$materialVersion"
-    implementation "androidx.recyclerview:recyclerview:$recyclerViewVersion"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintVersion"
+    // Core
+    implementation "androidx.constraintlayout:constraintlayout:$version_constraint_layout"
+    implementation "androidx.core:core-ktx:$version_core"
+    implementation "androidx.activity:activity-ktx:$version_activity"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$version_navigation"
+    implementation "androidx.navigation:navigation-ui-ktx:$version_navigation"
+
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
+
+    // Room database
+    implementation "androidx.room:room-runtime:$version_room"
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    kapt "androidx.room:room-compiler:$version_room"
+    implementation "androidx.room:room-ktx:$version_room"
+
+    // Lifecycle
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$version_lifecycle"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$version_lifecycle"
+
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$version_lifecycle"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$version_lifecycle"
+
+    // Other
+    implementation "androidx.cardview:cardview:$version_cardview"
+    implementation "com.jakewharton.timber:timber:$version_timber"
+
+
+    // Testing - Fragments
+    debugImplementation "androidx.fragment:fragment-testing:1.5.6"
+    debugImplementation "androidx.test:core:1.5.0"
+
+    // Testing - Core
+    testImplementation "org.hamcrest:hamcrest:$version_hamcrest"
+    testImplementation "androidx.test:core-ktx:1.5.0"
+    testImplementation 'org.robolectric:robolectric:4.9'
+    testImplementation "androidx.test.ext:junit-ktx:1.1.5"
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$version_kotlin_coroutines"
+    testImplementation 'androidx.test:runner:1.5.2'
+
+    // Dependencies for Android instrumented unit tests
+    androidTestImplementation "junit:junit:$version_junit_androidx"
+    androidTestImplementation "androidx.test.ext:junit:$version_junit_androidx"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$version_kotlin_coroutines"
+    androidTestImplementation "androidx.test:core:1.5.0"
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+
+    androidTestImplementation "androidx.test.espresso:espresso-core:$version_expresso_core"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$version_expresso_core"
+    androidTestImplementation "androidx.test.espresso:espresso-idling-resource:$version_expresso_core"
+    debugImplementation "androidx.test.espresso:espresso-idling-resource:$version_expresso_core"
+
+//    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:1.5.1"
+    androidTestImplementation "org.mockito:mockito-core:5.2.0"
+    androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito:2.28.3'
+
+
+
+
+
+//    // App dependencies
+//    implementation "androidx.appcompat:appcompat:$appCompatVersion"
+//    implementation "androidx.legacy:legacy-support-v4:$androidXLegacySupport"
+//    implementation "androidx.annotation:annotation:$androidXAnnotations"
+
+//    implementation "androidx.cardview:cardview:$cardVersion"
+//    implementation "com.google.android.material:material:$materialVersion"
+//    implementation "androidx.recyclerview:recyclerview:$recyclerViewVersion"
+//    implementation "androidx.constraintlayout:constraintlayout:$constraintVersion"
 
     implementation 'com.google.code.gson:gson:2.8.5'
 
     // Architecture Components
     //Navigation dependencies
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-rc1'
-    kapt "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$archLifecycleVersion"
-    implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
-    implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
-    implementation "androidx.test.espresso:espresso-idling-resource:$espressoVersion"
+//    implementation 'androidx.appcompat:appcompat:1.2.0'
+//    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-rc1'
+//    kapt "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersion"
+//    implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$archLifecycleVersion"
+//    implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
+//    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$archLifecycleVersion"
+//    implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
+//    implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
+//    implementation "androidx.test.espresso:espresso-idling-resource:$espressoVersion"
 
-    //Room dependencies
-    implementation "androidx.room:room-ktx:$roomVersion"
-    implementation "androidx.room:room-runtime:$roomVersion"
-    kapt "androidx.room:room-compiler:$roomVersion"
-
-    //Coroutines Dependencies
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+//    //Room dependencies
+//    implementation "androidx.room:room-ktx:$roomVersion"
+//    implementation "androidx.room:room-runtime:$roomVersion"
+//    kapt "androidx.room:room-compiler:$roomVersion"
+//
+//    //Coroutines Dependencies
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
 
     //Koin
-    implementation "org.koin:koin-android:$koinVersion"
-    implementation "org.koin:koin-androidx-viewmodel:$koinVersion"
+    implementation "io.insert-koin:koin-android:3.4.0"
+
+//    implementation "org.koin:koin-android:$koinVersion"
+//    implementation "org.koin:koin-androidx-viewmodel:$koinVersion"
 
 
     // Dependencies for local unit tests
-    testImplementation "junit:junit:$junitVersion"
-    testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
-    testImplementation "androidx.arch.core:core-testing:$archTestingVersion"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
-    testImplementation "org.robolectric:robolectric:$robolectricVersion"
-    testImplementation "com.google.truth:truth:$truthVersion"
-    testImplementation "org.mockito:mockito-core:$mockitoVersion"
+//    testImplementation "junit:junit:$version_junit"
+//    testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
+//    testImplementation "androidx.arch.core:core-testing:$archTestingVersion"
+//    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+//    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
+//    testImplementation "org.robolectric:robolectric:$robolectricVersion"
+//    testImplementation "com.google.truth:truth:$truthVersion"
+//    testImplementation "org.mockito:mockito-core:$mockitoVersion"
 
     // AndroidX Test - JVM testing
-    testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
-    testImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
-    testImplementation "androidx.test:rules:$androidXTestRulesVersion"
+//    testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
+//    testImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
+//    testImplementation "androidx.test:rules:$androidXTestRulesVersion"
 
     // AndroidX Test - Instrumented testing
-    androidTestImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
-    androidTestImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
-    androidTestImplementation "androidx.test:rules:$androidXTestRulesVersion"
-    androidTestImplementation "androidx.room:room-testing:$roomVersion"
-    androidTestImplementation "androidx.arch.core:core-testing:$archTestingVersion"
-    androidTestImplementation "org.robolectric:annotations:$robolectricVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-intents:$espressoVersion"
-    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:$espressoVersion"
-    androidTestImplementation "junit:junit:$junitVersion"
-    // Once https://issuetracker.google.com/127986458 is fixed this can be testImplementation
-    implementation "androidx.fragment:fragment-testing:$fragmentVersion"
-    implementation "androidx.test:core:$androidXTestCoreVersion"
-    implementation "androidx.fragment:fragment:$fragmentVersion"
-    androidTestImplementation "org.mockito:mockito-core:$mockitoVersion"
-    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:$dexMakerVersion"
-    androidTestImplementation('org.koin:koin-test:2.0.1') { exclude group: 'org.mockito' }
+//    androidTestImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
+//    androidTestImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
+//    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
+//    androidTestImplementation "androidx.test:rules:$androidXTestRulesVersion"
+//    androidTestImplementation "androidx.room:room-testing:$roomVersion"
+//    androidTestImplementation "androidx.arch.core:core-testing:$archTestingVersion"
+//    androidTestImplementation "org.robolectric:annotations:$robolectricVersion"
+//    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
+//    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
+//    androidTestImplementation "androidx.test.espresso:espresso-intents:$espressoVersion"
+//    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:$espressoVersion"
+//    androidTestImplementation "junit:junit:$junitVersion"
+//    // Once https://issuetracker.google.com/127986458 is fixed this can be testImplementation
+//    implementation "androidx.fragment:fragment-testing:$fragmentVersion"
+//    implementation "androidx.test:core:$androidXTestCoreVersion"
+//    implementation "androidx.fragment:fragment:$fragmentVersion"
+//
+//    androidTestImplementation "org.mockito:mockito-core:5.2.0"
+//    androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito:2.28.3'
 
+//    androidTestImplementation('org.koin:koin-test:2.0.1') { exclude group: 'org.mockito' }
+    // Koin Test features
+    androidTestImplementation "io.insert-koin:koin-test:3.4.0"
+    // Koin for JUnit 4
+    androidTestImplementation "io.insert-koin:koin-test-junit4:3.4.0"
 
 
     //Maps & Geofencing
-    implementation "com.google.android.gms:play-services-location:$playServicesVersion"
-    implementation "com.google.android.gms:play-services-maps:$playServicesVersion"
+//    implementation "com.google.android.gms:play-services-location:$playServicesVersion"
+//    implementation "com.google.android.gms:play-services-maps:$playServicesVersion"
+    implementation "com.google.android.gms:play-services-maps:$version_maps"
+    implementation "com.google.android.gms:play-services-location:$version_location_services"
 
 
 }
