--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -1,67 +1,58 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlinVersion = '1.3.72'
-    ext.navigationVersion = "2.2.0"
+    ext {
+        version_kotlin = '1.7.20'
+        version_core = '1.9.0'
+
+        version_constraint_layout = '2.2.0-alpha05'
+        version_activity = '1.6.1'
+
+        version_kotlin_coroutines = '1.6.4'
+
+        version_lifecycle = '2.5.1'
+        version_navigation = '2.5.3'
+        version_recyclerview = '1.3.0-rc01'
+        version_room = '2.5.0'
+
+        version_moshi = '1.14.0'
+        version_retrofit = '2.9.0'
+        version_retrofit_coroutines_adapter = '0.9.2'
+
+        version_junit = '4.13.2'
+        version_junit_androidx = '1.1.5'
+        version_expresso_core = '3.5.1'
+        version_hamcrest = '2.2'
+
+        version_timber = '1.0.0'
+        version_cardview = '1.0.0'
+
+        version_gms='4.3.3'
+        version_maps='18.1.0'
+        version_location_services='21.0.1'
+
+    }
+
 
     repositories {
         google()
-        jcenter()
-
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
-        classpath 'com.google.gms:google-services:4.3.3'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:7.3.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
+        classpath "com.google.gms:google-services:$version_gms"
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-ext {
-    // Sdk and tools
-    // Support library and architecture components support minSdk 14 and above.
-    minSdkVersion = 16
-    targetSdkVersion = 30
-    compileSdkVersion = 30
-
-    // App dependencies
-    androidXVersion = '1.0.0'
-    androidXAnnotations = '1.0.1'
-    androidXLegacySupport = '1.0.0'
-    appCompatVersion = '1.2.0'
-    archLifecycleVersion = '2.2.0'
-    cardVersion = '1.0.0'
-    materialVersion = '1.1.0'
-    fragmentVersion = '1.1.0-alpha07'
-    recyclerViewVersion = '1.1.0'
-    mockitoVersion = '2.8.9'
-    constraintVersion = '2.0.0-rc1'
-    dexMakerVersion = '2.12.1'
-    coroutinesVersion = '1.2.1'
-    roomVersion = '2.2.5'
-    koinVersion = '2.0.1'
-    truthVersion = '0.44'
-    junitVersion = '4.12'
-    androidXTestCoreVersion = '1.2.0-beta01'
-    robolectricVersion = '4.3-beta-1'
-    androidXTestExtKotlinRunnerVersion = '1.1.1'
-    archTestingVersion = '2.0.0'
-    playServicesVersion = '17.0.0'
-    hamcrestVersion = '1.3'
-    androidXTestRulesVersion = '1.2.0-beta01'
-    espressoVersion = '3.2.0'
-
 }
