--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -24,6 +24,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+        all {
+            manifestPlaceholders = [ googleMapsApiKey:"${properties.getProperty('google.maps_api_key')}"]
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -37,6 +42,7 @@ android {
     buildFeatures {
         dataBinding true
     }
+
 }
 
 dependencies {
@@ -102,9 +108,6 @@ dependencies {
 //    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:1.5.1"
     androidTestImplementation "org.mockito:mockito-core:5.2.0"
     androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito:2.28.3'
-
-
-
 
 
 //    // App dependencies
