--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -27,10 +27,12 @@ buildscript {
         version_timber = '1.0.0'
         version_cardview = '1.0.0'
 
-        version_gms = '4.3.3'
-        version_maps = '18.1.0'
-        version_location_services = '21.0.1'
+        version_gms='4.3.3'
+        version_maps='18.1.0'
+        version_location_services='21.0.1'
 
+        version_firebase_bom='31.3.0'
+        version_firebase_ui_auth='8.0.2'
     }
 
 
