--- a/starter/app/src/main/AndroidManifest.xml
+++ b/starter/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             ever preserved
         -->
         <activity
-            android:name=".authentication.AuthenticationActivity"
+            android:name=".view.authentication.AuthenticationActivity"
             android:clearTaskOnLaunch="true"
             android:exported="true" />
         <activity
