RemindersListViewModel initial tests. Mock of User domain. Adjustment of gradle dependencies for Koin tests. Some move around.

--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -27,6 +27,8 @@ buildscript {
         version_timber = '5.0.1'
         version_cardview = '1.0.0'
 
+        version_koin = '3.4.0'
+
         version_gms='4.3.3'
         version_maps='18.1.0'
         // Beyond 20.0.0 some errors happen...
