--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -111,7 +111,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
 
     //Koin
-    implementation "io.insert-koin:koin-android:3.4.0"
+    implementation "io.insert-koin:koin-android:$version_koin"
 
 
     // AndroidX Test - JVM testing
@@ -142,10 +142,10 @@ dependencies {
 
 //    androidTestImplementation('org.koin:koin-test:2.0.1') { exclude group: 'org.mockito' }
     // Koin Test features
-    androidTestImplementation "io.insert-koin:koin-test:3.4.0"
+    testImplementation "io.insert-koin:koin-test:$version_koin"
     // Koin for JUnit 4
-    androidTestImplementation "io.insert-koin:koin-test-junit4:3.4.0"
-
+    testImplementation "io.insert-koin:koin-test-junit4:$version_koin"
+    testImplementation "io.insert-koin:koin-android:$version_koin"
 
     //Maps & Geofencing: support registering location reminder geofence and getting app notified
     implementation "com.google.android.gms:play-services-maps:$version_maps"
