--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -105,8 +105,10 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-idling-resource:$version_expresso_core"
     debugImplementation "androidx.test.espresso:espresso-idling-resource:$version_expresso_core"
 
-    androidTestImplementation "org.mockito:mockito-core:5.2.0"
-    androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito:2.28.3'
+    testImplementation "org.mockito:mockito-core:5.3.1"
+    testImplementation 'com.linkedin.dexmaker:dexmaker-mockito:2.28.3'
+    //testImplementation 'org.mockito:mockito-inline:5.2.0'
+
 
     implementation 'com.google.code.gson:gson:2.9.0'
 
