--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -101,7 +101,7 @@ dependencies {
     androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$version_kotlin_coroutines"
     androidTestImplementation 'androidx.test:runner:1.5.2'
-    androidTestImplementation 'org.robolectric:robolectric:4.9'
+//    androidTestImplementation 'org.robolectric:robolectric:4.9'
 
     androidTestImplementation "androidx.test.espresso:espresso-core:$version_expresso_core"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$version_expresso_core"
@@ -109,11 +109,15 @@ dependencies {
     debugImplementation "androidx.test.espresso:espresso-idling-resource:$version_expresso_core"
 
     // Mockito
-    testImplementation "org.mockito:mockito-core:5.3.1"
-//    testImplementation 'com.linkedin.dexmaker:dexmaker-mockito:2.28.3'
     testImplementation "org.mockito.kotlin:mockito-kotlin:4.1.0"
-    //testImplementation 'org.mockito:mockito-inline:5.2.0'
+    // testImplementation "org.mockito:mockito-core:5.3.1"
+    // testImplementation 'org.mockito:mockito-inline:5.2.0'
 
+    androidTestImplementation "org.mockito:mockito-android:5.3.1"
+    // androidTestImplementation "org.mockito:mockito-core:5.3.1"
+    // androidTestImplementation "org.mockito.kotlin:mockito-kotlin:4.1.0"
+    // androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito:2.28.3'
+    // androidTestImplementation 'org.mockito:mockito-inline:5.2.0'
 
     implementation 'com.google.code.gson:gson:2.9.0'
 
